--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,6 @@ img#logo-image{
     font-size: 4rem;
     font-family: Saira Condensed;
     font-weight: 900;
-    margin-right: 2rem;
 }
 
 .lol{
@@ -142,7 +141,8 @@ img#logo-image{
 }
 
 .ferenc {
-    margin-right: 50px;
+    padding-left: 2.5vw;
+    padding-right: 5vw;
 }
 
 .locationContainer{
@@ -194,11 +194,11 @@ img#logo-image{
 }
 
 .socials-footer {
-    padding:40px;
+    padding: 5vw;
 }
 
 .contacts-footer {
-    padding:40px;
+    padding: 5vw;
 }
 
 .container-dyntext{
@@ -428,7 +428,6 @@ img#logo-image{
         text-align: center;
     }
     .imageContainerAboutUs img {
-        margin-right: 50px;
         display:block;
     }
     #titoloFar {
