--- a/pages/storia.css
+++ b/pages/storia.css
@@ -45,6 +45,10 @@
     font-family: Roboto;
     font-weight: 60;
     color:#47454a;
+	text-align: center;
+	margin-left: 4vw;
+	margin-right: 4vw;
+	margin-bottom: -40px;
 }
 
 @keyframes slide-show{
@@ -62,4 +66,35 @@
     50%{
         opacity: 0;
     }
+}
+
+#small-nav {
+	border-top: 0px solid black;	
+	border-bottom: 0px solid black;
+}
+	
+@media (max-width: 820px) {
+	#small-nav {
+		border-top: 1.5px solid black;	
+		border-bottom: 1.5px solid black;
+	}
+}
+
+.nav-mob {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    font-family: Roboto;
+    font-size: 25px;
+	font-weight: bold;
+}
+
+h1{
+	display: flex;
+	justify-content: center;
+	font-size: 3rem;
+    font-family: Roboto;
+    font-weight: bold;
+    color: black;
 }
