--- a/pages/storia.css
+++ b/pages/storia.css
@@ -43,15 +43,15 @@
 #story-text {
     font-size: 1.5rem;
     font-family: Roboto;
-    font-weight: 60;
+    font-weight: 500; !important
     color:#47454a;
 	text-align: center;
 	margin-left: 4vw;
 	margin-right: 4vw;
 	margin-bottom: -40px;
 	text-shadow: 
-        0.2px 0.2px 0 black,
-        -0.2px -0.2px 0 black;
+        0.1px 0.1px 0 #47454a,
+        -0.1px -0.1px 0 #47454a;
 }
 
 @keyframes slide-show{
